--- a/assingnment2.ipynb
+++ b/assingnment2.ipynb
@@ -2,22 +2,326 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "772b4b2f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Name: Alice Average Marks: 84.00\n",
+      "\n",
+      " Name: Bob Average Marks: 85.00\n",
+      "\n",
+      " Name: Charlie Average Marks: 89.00\n",
+      "\n",
+      "{'student_id_001': {'name': 'Alice', 'age': 20, 'marks': {'Math': 85, 'Science': 90, 'History': 78}, 'total_marks': 253, 'average_marks': 84}, 'student_id_002': {'name': 'Bob', 'age': 22, 'marks': {'Math': 88, 'Science': 76, 'History': 92}, 'total_marks': 256, 'average_marks': 85}, 'student_id_003': {'name': 'Charlie', 'age': 19, 'marks': {'Math': 95, 'Science': 89, 'History': 84}, 'total_marks': 268, 'average_marks': 89}}\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "print(\"Heloo\")"
+    "# Exercise 1\n",
+    "# Create a dictionary for one student with name, age, and a nested dictionary of three subjects and marks\n",
+    "# Print the student’s name and age, then calculate and print the average mark\n",
+    "student = {\n",
+    "    \"student_id_001\": {\n",
+    "        \"name\": \"Alice\",\n",
+    "        \"age\": 20,\n",
+    "        \"marks\": {\n",
+    "            \"Math\": 85,\n",
+    "            \"Science\": 90,\n",
+    "            \"History\": 78   \n",
+    "        }\n",
+    "    },\n",
+    "    \"student_id_002\": {\n",
+    "        \"name\": \"Bob\",\n",
+    "        \"age\": 22,\n",
+    "        \"marks\": {\n",
+    "            \"Math\": 88,\n",
+    "            \"Science\": 76,\n",
+    "            \"History\": 92   \n",
+    "        }\n",
+    "    },\n",
+    "    \"student_id_003\": {\n",
+    "        \"name\": \"Charlie\",\n",
+    "        \"age\": 19, \n",
+    "        \"marks\": {\n",
+    "            \"Math\": 95,\n",
+    "            \"Science\": 89,\n",
+    "            \"History\": 84   \n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "# Print the dictionary\n",
+    "for id, info in student.items():\n",
+    "    # print(f\"ID: {id}\")\n",
+    "    # print(f\"Name: {info['name']}\")\n",
+    "    # print(f\"Age: {info['age']}\")\n",
+    "    # print(\"Marks:\")\n",
+    "    total_marks = 0\n",
+    "    for subject, mark in info['marks'].items():\n",
+    "        # print(f\"  {subject}: {mark}\")\n",
+    "        total_marks += mark\n",
+    "    student[id]['total_marks'] = total_marks\n",
+    "    average_marks = total_marks // len(info['marks'])\n",
+    "    student[id]['average_marks'] = average_marks\n",
+    "    print(f\" Name: {info['name']} Average Marks: {average_marks:.2f}\")\n",
+    "    print()\n",
+    "print(student)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3ec248",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "45bb792d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Department: Sales\n",
+      " Budget: 500000\n",
+      " Total Salary Expense: 225000\n",
+      "\n",
+      "Department: Engineering\n",
+      " Budget: 1200000\n",
+      " Total Salary Expense: 310000\n",
+      "\n",
+      "Department: HR\n",
+      " Budget: 30000\n",
+      " Total Salary Expense: 125000\n",
+      " Warning: Salary expenses exceed budget!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2:\n",
+    "# # Create a dictionary for one department with keys \"budget\" and \"employees\"\n",
+    "# \"employees\" should be a list of two dictionaries, each with \"name\" and \"salary\"\n",
+    "# # Calculate and print the total salary, then print if it is within the budget\n",
+    "\n",
+    "Employees = {\n",
+    "     \"Sales\":{\n",
+    "    \"Budget\": 500000,\n",
+    "    \"Employees\":[\n",
+    "        {\"Name\": \"Alice\",  \"Salary\": 80000},\n",
+    "        {\"Name\": \"Bob\",    \"Salary\": 75000},\n",
+    "        {\"Name\": \"Charlie\",\"Salary\": 70000}\n",
+    "    ]\n",
+    "    },\n",
+    "    \"Engineering\":{\n",
+    "    \"Budget\": 1200000,\n",
+    "    \"Employees\":[\n",
+    "        {\"Name\": \"David\",  \"Salary\": 95000},\n",
+    "        {\"Name\": \"Eve\",    \"Salary\": 105000},\n",
+    "        {\"Name\": \"Frank\",  \"Salary\": 110000}\n",
+    "    ]\n",
+    "    },\n",
+    "    \"HR\":{\n",
+    "    \"Budget\": 30000,\n",
+    "    \"Employees\":[   \n",
+    "        {\"Name\": \"Grace\",  \"Salary\": 60000},\n",
+    "        {\"Name\": \"Heidi\",  \"Salary\": 65000}\n",
+    "    ]\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "for dep,info in Employees.items():\n",
+    "    print(f\"Department: {dep}\")\n",
+    "    print(f\" Budget: {info['Budget']}\")\n",
+    "    total_salary = 0\n",
+    "    for emp in info[\"Employees\"]:\n",
+    "        total_salary += emp['Salary']\n",
+    "    print(f\" Total Salary Expense: {total_salary}\")\n",
+    "    info['Salary'] = total_salary\n",
+    "    if total_salary > info['Budget']:\n",
+    "        print(\" Warning: Salary expenses exceed budget!\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c6740e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First coordinate: (1, 2)\n",
+      "Last coordinate: (5, 6)\n",
+      "[(1, 2), (3, 4), (5, 6)]\n",
+      "Swapped coordinates: [(2, 1), (4, 3), (6, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 3\n",
+    "# Create a list of 3 coordinate tuples (x, y)\n",
+    "# Print the first and last coordinates\n",
+    "# Create and print a new list with x and y swapped in each tuple\n",
+    "\n",
+    "coordinates = [(1, 2), (3, 4), (5, 6)]\n",
+    "print(\"First coordinate:\", coordinates[0])\n",
+    "print(\"Last coordinate:\", coordinates[-1])\n",
+    "\n",
+    "\n",
+    "print(coordinates)\n",
+    "# Swap the x and y values of each coordinate and print the updated list\n",
+    "swapped_coordinates = [(y, x) for (x, y) in coordinates]\n",
+    "print(\"Swapped coordinates:\", swapped_coordinates)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "44a65f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "devillers@mail.com\n",
+      "sathu@gmail.com\n",
+      "deepak123@gmail.com\n",
+      "virat@gmail.com\n",
+      "brevis@mail.com\n",
+      "{'deepak123@gmail.com'}\n",
+      "After removing: {'sathu@gmail.com', 'deepak123@gmail.com', 'virat@gmail.com', 'brevis@mail.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 4:\n",
+    "\n",
+    "#Create two sets: tech_subscribers and news_subscribers with some overlapping emails\n",
+    "# # Print the emails that are in both sets\n",
+    "# Print all unique emails from both sets\n",
+    "# Remove one email from both sets and print the updated sets\n",
+    "\n",
+    "\n",
+    "tech_subscribers = {\"deepak123@gmail.com\",\"sathu@gmail.com\",\"deepak123@gmail.com\",\"virat@gmail.com\"}\n",
+    "new_subscribers = {\"devillers@mail.com\",\"devillers@mail.com\",\"brevis@mail.com\",\"deepak123@gmail.com\"}\n",
+    "\n",
+    "\n",
+    "#Print all unique email addresses from both sets using a loop\n",
+    "all_subscribers = tech_subscribers.union(new_subscribers)\n",
+    "for subscriber in all_subscribers:\n",
+    "    print(subscriber)\n",
+    "\n",
+    "# #Print email addresses that are in both sets\n",
+    "common_subscribers = tech_subscribers.intersection(new_subscribers)\n",
+    "print(common_subscribers)\n",
+    "\n",
+    "# Remove a specific subscriber safely\n",
+    "all_subscribers.discard(\"devillers@mail.com\")\n",
+    "\n",
+    "print(\"After removing:\", all_subscribers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7a4d6770",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title: Night\n",
+      " Borrowing Info:\n",
+      "  - reader01 borrowed on 2024-01-15\n",
+      "  - reader04 borrowed on 2024-02-20\n",
+      "\n",
+      "Title: Morning\n",
+      " Borrowing Info:\n",
+      "  - reader02 borrowed on 2024-03-10\n",
+      "  - reader05 borrowed on 2024-04-12\n",
+      "\n",
+      "Title: Evening\n",
+      " Borrowing Info:\n",
+      "  - reader03 borrowed on 2024-05-05\n",
+      "  - reader06 borrowed on 2024-06-15\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 5\n",
+    "# Create a dictionary \"library\" with 3 books; each value is a dictionary with \"title\", \"author\", \"available\"\n",
+    "# Create a list \"borrowing_history\" with 2 tuples (book_id, user_name)\n",
+    "# Print all titles of books that are available\n",
+    "# Print all user names that appear in borrowing_history\n",
+    "books = {\n",
+    "    \"Night\": {\n",
+    "        \"author\": \"Elie Wiesel\",\n",
+    "        \"year\": 1960,\n",
+    "        \"genre\": \"Memoir\",\n",
+    "        \"list1\": [\n",
+    "            {\"book_id\": 123, \"user_name\": \"reader01\"}\n",
+    "        ],\n",
+    "        \"borrowing_info\": [(\"reader01\", \"2024-01-15\"), (\"reader04\", \"2024-02-20\")]\n",
+    "    },\n",
+    "    \"Morning\": {\n",
+    "        \"author\": \"Karl Ove Knausgård\",\n",
+    "        \"year\": 2009,\n",
+    "        \"genre\": \"Autobiographical novel\",\n",
+    "        \"list2\": [\n",
+    "            {\"book_id\": 456, \"user_name\": \"reader02\"}\n",
+    "        ],\n",
+    "        \"borrowing_info\": [(\"reader02\", \"2024-03-10\"), (\"reader05\", \"2024-04-12\")]\n",
+    "    },\n",
+    "    \"Evening\": {\n",
+    "        \"author\": \"Ray Bradbury\",\n",
+    "        \"year\": 1950,\n",
+    "        \"genre\": \"Science fiction\",\n",
+    "        \"list3\": [\n",
+    "            {\"book_id\": 789, \"user_name\": \"reader03\"}\n",
+    "        ],\n",
+    "        \"borrowing_info\": [(\"reader03\", \"2024-05-05\"), (\"reader06\", \"2024-06-15\")]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "for book_title, details in books.items():\n",
+    "    print(f\"Title: {book_title}\")\n",
+    "    print(\" Borrowing Info:\")\n",
+    "    for borrower, date in details[\"borrowing_info\"]:\n",
+    "        print(f\"  - {borrower} borrowed on {date}\")\n",
+    "    print()\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
